--- a/saucedemo/pom.xml
+++ b/saucedemo/pom.xml
@@ -67,8 +67,9 @@
         <version>3.5.2</version>
         <configuration>
           <suiteXmlFiles>
+            
+            <suiteXmlFile>SauceDemotestng.xml</suiteXmlFile>
             <suiteXmlFile>testng.xml</suiteXmlFile>
-            <suiteXmlFile>.xml</suiteXmlFile>
 
           </suiteXmlFiles>
         </configuration>
